--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.11.16",
     "morgan": "^1.10.0",
     "vue": "^2.6.12",
